--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -6,13 +6,16 @@
         <param name="onload" value="true" />
     </feature>
     <allow-intent href="market:*" />
-    <name>Mobile App</name>
-    <description>
-		A sample Apache Cordova application that responds to the deviceready
-		event.
-	</description>
-    <author email="thym-dev@eclipse.org" href="http://www.eclipse.org/thym">
-		Eclipse.org - Thym
+    <icon density="ldpi" src="www/img/icons/ldpi.png" />
+    <icon density="mdpi" src="www/img/icons/mdpi.png" />
+    <icon density="hdpi" src="www/img/icons/hdpi.png" />
+    <icon density="xhdpi" src="www/img/icons/xhdpi.png" />
+    <name>CoolStayzz</name>
+    <description>Home stay management is made much easier with this app!
+		Experience the change ! Have a nice stay!!</description>
+    <author email="abishekknpta@gmail.com" href="http://www.eclipse.org/thym">
+		Eclipse.org -
+		Thym
 	</author>
     <content src="index.html" />
     <access origin="*" />
